--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Supermarkt Route</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -17,3 +18,4 @@
 <script src="app.js"></script>
 </body>
 </html>
+
